--- a/public_html/.user.ini
+++ b/public_html/.user.ini
@@ -3,3 +3,5 @@
 ; To make changes to this file, use the cPanel MultiPHP INI Editor (Home >> Software >> MultiPHP INI Editor)
 ; For more information, read our documentation (https://go.cpanel.net/EA4ModifyINI)
 extension=sockets
+extension=php_mbstring.dll
+extension=php_exif.dll
