--- a/public_html/php.ini
+++ b/public_html/php.ini
@@ -1,4 +1,6 @@
 allow_url_fopen = 1;
 allow_url_include = 1;
-extension=exif;
---enable-exif;
+extension=php_mbstring.so;
+extension=php_exif.so;
+extension=php_mbstring.so;
+extension=exif.so;
